k8s/np-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-database
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
    - Ingress
  ingress:
  - from:                  
    - podSelector:
        matchLabels:
          app: backend
    ports:                 
    - protocol: TCP
      port: 3306
